# conan-libzippp

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py  libzippp-config.cmake
.travis/: install.sh
test_package/: CMakeLists.txt  conanfile.py  tests.cpp
